Fixed image issue on Firefox

--- a/src/www/containers/landingpage/LandingPage.scss
+++ b/src/www/containers/landingpage/LandingPage.scss
@@ -32,7 +32,8 @@
       padding-top: 2rem;
 
       .innerphoto {
-        max-height: 10rem;
+        height: 10rem;
+        width: 10rem;
         margin-left: 3vw;
       }
 
